recursion.cons.lessons.recursion.cons.PlusOne.scala.error
plusOne:8: error: identifier expected but 'return' found.
	return l.head::plusOne(l.tail);
        ^