recursion.cons.lessons.recursion.cons.PlusOne.scala.code
def plusOne(l:List[Int]): List[Int] = {

	if(l.head == Nil)
		return Nil;
		
	l.head = l.head + 1:

	return l.head::plusOne(l.tail);
}
